# CiPointCloudViewer

./: .gitignore  .gitmodules  README.md
assets/: imgui.ini  point_cloud.frag  point_cloud.vert  pointcloud.frag  pointcloud.vert  vertices.vert
include/: AppGui.h  Cloud.h  Clouds.h  Configure.h  Dispatcher.h  FilterParams.h  FpsCounter.h  Point.h  SavingVerticesWorker.h  Signal.h  Singleton.h  Skeleton.h  Store.h  Vertex.h  ViewParams.h
include/action/: CloudDataSourcesAction.h  CloudsAction.h  ViewParamsAction.h
include/filter/: PassThroughFilter.hpp  StatisticalOutlierRemovalFilter.hpp  VoxelFilter.hpp
include/grabber/: PcdGrabber.hpp  PointCloudGrabber.hpp  SequentialPcdGrabber.hpp
include/impl/: AppGuiImpl.h  CloudsImpl.h  SavingVerticesWorkerImpl.h  ViewParamsImpl.h  YamlConfigure.h
include/impl/io/: CloudDataSourcesImpl.h  SensorDeviceManagerImpl.h
include/io/: CalibrationParamsManager.h  CapturedLog.h  CapturedLogLoader.h  CapturedLogManager.h  CloudDataSources.h  SensorDevice.h  SensorDevice.hpp  SensorDeviceManager.h  SensorDeviceManager.hpp  SequentialPcdPlayer.h
include/io/datasource/: CloudDataSource.h  OpenNI2CloudDataSource.h  OpenNI2GrabberCloudDataSource.h  SkeletonTracker.h
include/io/exporter/: Exporter.h  ExporterBase.h  Exporters.h  SkeletonsExporter.h  VerticesExporter.h
include/model/: CloudsManager.h
include/renderer/: BatchRenderer.h  CloudsRenderer.h  GridRenderer.h  PointsRenderer.h  PolarGridRenderer.h  RectangularGridRenderer.h  Renderer.h  VerticesRenderer.h
include/renderer/cloud/: CloudRenderer.h  CloudsRenderer.h  PointsRenderer.h  VerticesRenderer.h
include/renderer/grid/: GridRenderer.h  PolarGridRenderer.h  RectangularGridRenderer.h
include/renderer/skeleton/: SkeletonsRenderer.h
include/util/: util.h
include/view/: AppGui.h
include/view/menu/: FileMenu.h  Menu.h  ViewMenu.h  WindowMenu.h
include/view/window/: AppearanceWindow.h  CameraWindow.h  CloudsWindow.h  DeviceManagerWindow.h  FiltersWindow.h  InformationWindow.h  PlayerWindow.h  Window.h
proj/cmake/: CMakeLists.txt
scripts/: setup.sh
src/: AppGui.cpp  CiPcdViewerApp.cpp  CiPointCloudViewerApp.cpp  CloudGl.hpp  Clouds.cpp  Configure.cpp  Dispatcher.cpp  FpsCounter.cpp  SavingVerticesWorker.cpp  Skeleton.cpp  ViewParams.cpp
src/filter/: Filter.hpp  PassThroughFilter.hpp  StatisticalOutlierRemovalFilter.hpp  VoxelFilter.hpp
src/grabber/: PcdGrabber.hpp  PointCloudGrabber.hpp  SequentialPcdGrabber.hpp
src/impl/: AppGuiImpl.cpp  CloudsImpl.cpp  SavingVerticesWorkerImpl.cpp  ViewParamsImpl.cpp  YamlConfigure.cpp
src/impl/io/: CloudDataSourcesImpl.cpp  SensorDeviceManagerImpl.cpp
src/io/: CalibrationParams.hpp  CalibrationParamsManager.cpp  CapturedLog.cpp  CapturedLogLoader.cpp  CapturedLogManager.cpp  CloudDataSources.cpp  SensorDevice.cpp  SensorDevice.hpp  SensorDeviceManager.hpp  SequentialPcdPlayer.cpp
src/io/datasource/: CloudDataSource.cpp  OpenNI2CloudDataSource.cpp  OpenNI2GrabberCloudDataSource.cpp  SkeletonTracker.cpp
src/io/exporter/: Exporter.cpp  ExporterBase.cpp  Exporters.cpp  SkeletonsExporter.cpp  VerticesExporter.cpp
src/renderer/: BatchRenderer.cpp  CloudsRenderer.cpp  GridRenderer.cpp  PointsRenderer.cpp  PolarGridRenderer.cpp  RectangularGridRenderer.cpp  VerticesRenderer.cpp
src/renderer/cloud/: CloudRenderer.cpp  CloudsRenderer.cpp  PointsRenderer.cpp  VerticesRenderer.cpp
src/renderer/grid/: GridRenderer.cpp  PolarGridRenderer.cpp  RectangularGridRenderer.cpp
src/renderer/skeleton/: SkeletonsRenderer.cpp
src/util/: util.cpp
src/view/: AppGui.cpp
src/view/menu/: FileMenu.cpp  Menu.cpp  ViewMenu.cpp  WindowMenu.cpp
src/view/window/: AppearanceWindow.cpp  CameraWindow.cpp  CloudsWindow.cpp  DeviceManagerWindow.cpp  FiltersWindow.cpp  InformationWindow.cpp  PlayerWindow.cpp  Window.cpp
vc2013/: CiPointCloudViewer.sln  CiPointCloudViewer.vcxproj  CiPointCloudViewer.vcxproj.filters
vc2013_winrt/: CiPointCloudViewer.sln  CiPointCloudViewer.vcxproj  CiPointCloudViewer.vcxproj.filters  Package.appxmanifest
xcode/CiPcdViewer.xcodeproj/: project.pbxproj
xcode/CiPointCloudViewer.xcodeproj/: project.pbxproj
